<resources>

    <string name="app_name">Real Estate Manager</string>

    // Estate
    <string name="estate_type_house">House</string>
    <string name="estate_type_duplex">Duplex</string>
    <string name="estate_type_flat">Flat</string>
    <string name="estate_type_penthouse">Penthouse</string>
    <string name="estate_status_available">Available</string>
    <string name="estate_status_sold">Sold</string>

    // Estate List
    <string name="estate_list_type">House</string>
    <string name="estate_list_city">Manhattan</string>
    <string name="estate_list_price">$17,666,765</string>
    <string name="estate_list_picture">Estate list picture</string>

    // Estate sheet
    <string name="sheet_estate_title_media">Media</string>
    <string name="sheet_estate_title_description">Description</string>
    <string name="sheet_estate_entry_date">Entry Date :</string>
    <string name="sheet_estate_sale_date">Sale Date :</string>
    <string name="sheet_estate_description">Anchored bay a vast marble gallery with sweeping staircase, the entertaining floor includes a baronial living room facing Park Avenue, handsome library with original paneling, and tremendous dining room; all of which enjoy fireplaces. The state-of-the-art St. Charles designed kitchen includes a sunny breakfast room and staff quarters. Upstairs, the expansive master suite overlooks Park Avenue and includes two marble baths, two dressing rooms, and two offices. Additionally the are three large bedrooms with en-suite bath and media.</string>
    <string name="sheet_estate_title_surface">Surface</string>
    <string name="sheet_estate_surface">750 sq m</string>
    <string name="sheet_estate_title_number_of_rooms">Number of rooms</string>
    <string name="sheet_estate_numbers_of_rooms">8</string>
    <string name="sheet_estate_title_numbers_of_bathrooms">Number of bathrooms</string>
    <string name="sheet_estate_numbers_of_bathrooms">2</string>
    <string name="sheet_estate_title_numbers_of_bedrooms">Number of bedrooms</string>
    <string name="sheet_estate_numbers_of_bedrooms">4</string>
    <string name="sheet_estate_title_location">Location</string>
    <string name="sheet_estate_location">740 Park Avenue\nApt 6/7A\nNew York\nNY 10021\nUnited States</string>
    <string name="sheet_estate_distance_school">School distance</string>
    <string name="sheet_estate_distance_parc">Parc distance</string>
    <string name="sheet_estate_distance_shop">Shop distance</string>
    <string name="sheet_estate_distance_example">30 m</string>
    <string name="sheet_estate_status">Available</string>
    <string name="sheet_estate_edit">Edit estate</string>
    <string name="sheet_estate_picture">Estate picture</string>
    <string name="sheet_estate_sale_validation">Validation of the sale</string>
    <string name="sheet_estate_sale_validation_ask">Has the estate been sold ?</string>
    <string name="sheet_estate_sale_yes">Yes</string>
    <string name="sheet_estate_sale_no">No</string>

    // Edit Estate
    <string name="edit_estate_edit">Edit estate</string>
    <string name="edit_estate_add">Add estate</string>
    <string name="edit_estate_add_picture">Add picture</string>
    <string name="edit_estate_take_picture">Take picture</string>
    <string name="edit_estate_edited">Estate edited</string>
    <string name="edit_estate_added">Estate added</string>
    <string name="edit_estate_entry_date">Entry Date : </string>
    <string name="edit_estate_type">Type :</string>
    <string name="edit_estate_agent">Agent :</string>
    <string name="edit_estate_price">Price :</string>
    <string name="edit_estate_description">Description :</string>
    <string name="edit_estate_surface">Surface :</string>
    <string name="edit_estate_surface_unit">sq in</string>
    <string name="edit_estate_numbers_of_rooms">Number of rooms :</string>
    <string name="edit_estate_numbers_of_bathrooms">Number of bathrooms :</string>
    <string name="edit_estate_numbers_of_bedrooms">Number of bedrooms :</string>
    <string name="edit_estate_house_number">House number :</string>
    <string name="edit_estate_distance_school">School distance :</string>
    <string name="edit_estate_distance_parc">Parc distance :</string>
    <string name="edit_estate_distance_shop">Shop distance :</string>
    <string name="edit_estate_distance_unit">yd</string>
    <string name="edit_estate_street">Street :</string>
    <string name="edit_estate_additional_address">Additional address :</string>
    <string name="edit_estate_zipCode">Zip Code :</string>
    <string name="edit_estate_city">City :</string>
    <string name="edit_estate_country">Country :</string>
    <string name="edit_estate_button_validation">Add estate</string>
    <string name="edit_estate_location">Location :</string>
    <string name="edit_estate_entry_date_required">Entry date is required</string>
    <string name="edit_estate_type_required">Type is required</string>
    <string name="edit_estate_agent_required">Agent is required</string>
    <string name="edit_estate_picture_required">Picture is required</string>
    <string name="edit_estate_price_required">Price is required</string>
    <string name="edit_estate_description_required">Description is required</string>
    <string name="edit_estate_surface_required">Surface is required</string>
    <string name="edit_estate_numberOfRooms_required">Number of rooms is required</string>
    <string name="edit_estate_numberOfBathrooms_required">Number of bathrooms is required</string>
    <string name="edit_estate_numberOfBedrooms_required">Number of bedrooms is required</string>
    <string name="edit_estate_distance_school_required">School distance is required</string>
    <string name="edit_estate_distance_parc_required">Parc distance is required</string>
    <string name="edit_estate_distance_shop_required">Shop distance is required</string>
    <string name="edit_estate_houseNumber_required">House number is required</string>
    <string name="edit_estate_street_required">Street is required</string>
    <string name="edit_estate_zipCode_required">Zip code is required</string>
    <string name="edit_estate_city_required">City is required</string>
    <string name="edit_estate_country_required">Country is required</string>
    <string name="estate_type_not_selected">Select a type</string>
    <string name="estate_agent_not_selected">Select a agent</string>

    // Picture
    <string name="picture">Picture</string>
    <string name="picture_added">Picture Added</string>
    <string name="picture_to_left">To left picture</string>
    <string name="picture_to_Right">To Right picture</string>
    <string name="picture_delete">Delete picture</string>
    <string name="picture_description">Picture description</string>
    <string name="picture_description_write">Write a description</string>
    <string name="picture_description_required">Description is required</string>
    <string name="picture_button_ok">OK</string>

    // Loan simulator
    <string name="loan_simulator">Loan simulator</string>
    <string name="loan_simulator_title">Loan simulator :</string>
    <string name="loan_simulator_amount">Amount : </string>
    <string name="loan_simulator_years">Years : </string>
    <string name="loan_simulator_rate">Rate (%) : </string>
    <string name="loan_simulator_bring">Bring : </string>
    <string name="loan_simulator_results">Results : </string>
    <string name="loan_simulator_monthly_payment">Monthly payment :</string>
    <string name="loan_simulator_total_interests">Total interests :</string>
    <string name="loan_simulator_total_payment">Total payment :</string>
    <string name="loan_simulator_calculate">Calculate</string>

    // Map
    <string name="map">Map</string>
    <string name="map_center">Map center</string>
    <string name="map_position_estate">Estate position</string>
    <string name="map_position_agent">Agent position</string>
    
    // filter estate list
    <string name="filter_list_estate_title">Estate list filter</string>
    <string name="filter_list_min">min</string>
    <string name="filter_list_max">max</string>
    <string name="filter_list_estate_price">Price :</string>
    <string name="filter_list_estate_type">Type :</string>
    <string name="filter_list_estate_surface">Surface : (sq in)</string>
    <string name="filter_list_estate_numbers_of_rooms">Number of rooms :</string>
    <string name="filter_list_estate_numbers_of_bathrooms">Number of bathrooms :</string>
    <string name="filter_list_estate_numbers_of_bedrooms">Number of bedrooms :</string>
    <string name="filter_list_estate_house_number">House number :</string>
    <string name="filter_list_estate_distance_school">School distance : (yd)</string>
    <string name="filter_list_estate_distance_parc">Parc distance : (yd)</string>
    <string name="filter_list_estate_distance_shop">Shop distance : (yd)</string>
    <string name="filter_list_estate_street">Street :</string>
    <string name="filter_list_estate_additional_address">Additional address :</string>
    <string name="filter_list_estate_zipCode">Zip Code :</string>
    <string name="filter_list_estate_city">City :</string>
    <string name="filter_list_estate_country">Country :</string>
    <string name="filter_list_estate_button_search">Search</string>
    <string name="filter_list_estate_location">Location :</string>
    <string name="filter_list_number_of_pictures">Number_of_pictures :</string>
    <string name="filter_list_put_on_the_market_since">Put on the market since :</string>
    <string name="filter_list_sold_since">Sold since :</string>
    <string name="filter_list_sector">Sector :</string>
    <string name="week">week</string>
    <string name="month">month</string>

</resources>
