<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_main_loan_simulator"
        android:icon="@drawable/icon_menu_loan_simulator"
        android:title="@string/loan_simulator"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_main_filter_list_estate"
        android:icon="@drawable/icon_menu_filter_list_estate"
        android:title="@string/filter_list_estate_title"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_main_map"
        android:icon="@drawable/icon_menu_map"
        android:title="@string/map"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_main_add_estate"
        android:icon="@drawable/icon_menu_add_estate"
        android:title="@string/edit_estate_add"
        app:showAsAction="always" />

</menu>