<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/picture_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/picture"
        android:src="@drawable/picture_default"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp"
        tools:src="@drawable/picture_default" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/picture_description"
        style="@style/TextAppearance.Material3.TitleMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:text="@string/picture_description"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/picture_icon_left"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:contentDescription="@string/picture_to_left"
        android:src="@drawable/icon_picture_left"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/picture_icon_right"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:contentDescription="@string/picture_to_Right"
        android:src="@drawable/icon_picture_right"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/picture_icon_delete"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:contentDescription="@string/picture_delete"
        android:src="@drawable/icon_picture_delete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>