<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="110dp">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/item_estate_picture"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="@string/estate_list_picture"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/item_estate_type"
        style="@style/TextAppearance.Material3.TitleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:padding="5dp"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toRightOf="@id/item_estate_picture"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/estate_list_type" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/item_estate_city"
        style="@style/TextAppearance.Material3.TitleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:paddingStart="5dp"
        android:paddingEnd="0dp"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@+id/item_estate_price"
        app:layout_constraintLeft_toRightOf="@id/item_estate_picture"
        app:layout_constraintTop_toBottomOf="@id/item_estate_type"
        tools:text="@string/estate_list_city" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/item_estate_price"
        style="@style/TextAppearance.Material3.TitleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:padding="5dp"
        android:textColor="@color/estate_list_price"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/item_estate_picture"
        tools:text="@string/estate_list_price" />

    <View
        android:id="@+id/item_dividing_bar"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/estate_list_dividing_bar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>