<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/activity_simulator_loan_title"
        style="@style/TextAppearance.Material3.TitleMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@id/activity_simulator_loan_amount"
        android:padding="15dp"
        android:text="@string/loan_simulator_title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/activity_simulator_loan_title_amount"
        style="@style/TextAppearance.Material3.BodyMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@id/activity_simulator_loan_amount"
        android:text="@string/loan_simulator_amount"
        app:layout_constraintBottom_toBottomOf="@id/activity_simulator_loan_amount"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@id/activity_simulator_loan_amount" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/activity_simulator_loan_amount"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:inputType="numberDecimal"
        android:padding="10dp"
        app:layout_constraintLeft_toRightOf="@id/activity_simulator_loan_title_amount"
        app:layout_constraintTop_toBottomOf="@id/activity_simulator_loan_title" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/activity_simulator_loan_duration_in_years_title"
        style="@style/TextAppearance.Material3.BodyMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@id/activity_simulator_loan_years"
        android:text="@string/loan_simulator_years"
        app:layout_constraintBottom_toBottomOf="@id/activity_simulator_loan_years"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@id/activity_simulator_loan_years" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/activity_simulator_loan_years"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:inputType="number"
        android:padding="10dp"
        app:layout_constraintLeft_toRightOf="@id/activity_simulator_loan_duration_in_years_title"
        app:layout_constraintRight_toRightOf="@id/activity_simulator_loan_amount"
        app:layout_constraintTop_toBottomOf="@id/activity_simulator_loan_amount" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/activity_simulator_loan_title_rate"
        style="@style/TextAppearance.Material3.BodyMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@id/activity_simulator_loan_rate"
        android:text="@string/loan_simulator_rate"
        app:layout_constraintBottom_toBottomOf="@id/activity_simulator_loan_rate"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@id/activity_simulator_loan_rate" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/activity_simulator_loan_rate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:inputType="numberDecimal"
        android:padding="10dp"
        app:layout_constraintLeft_toRightOf="@id/activity_simulator_loan_title_rate"
        app:layout_constraintRight_toRightOf="@id/activity_simulator_loan_amount"
        app:layout_constraintTop_toBottomOf="@id/activity_simulator_loan_years" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/activity_simulator_loan_title_bring"
        style="@style/TextAppearance.Material3.BodyMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@id/activity_simulator_loan_bring"
        android:text="@string/loan_simulator_bring"
        app:layout_constraintBottom_toBottomOf="@id/activity_simulator_loan_bring"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/activity_simulator_loan_rate"
        app:layout_constraintTop_toTopOf="@id/activity_simulator_loan_bring" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/activity_simulator_loan_bring"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:inputType="numberDecimal"
        android:padding="10dp"
        app:layout_constraintLeft_toRightOf="@id/activity_simulator_loan_title_bring"
        app:layout_constraintRight_toRightOf="@id/activity_simulator_loan_amount"
        app:layout_constraintTop_toBottomOf="@id/activity_simulator_loan_rate" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/activity_simulator_loan_title_results"
        style="@style/TextAppearance.Material3.TitleMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:labelFor="@id/activity_simulator_loan_amount"
        android:padding="15dp"
        android:text="@string/loan_simulator_results"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/activity_simulator_loan_rate" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/activity_simulator_loan_title_monthly_payment"
        style="@style/TextAppearance.Material3.BodyMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@id/activity_simulator_loan_monthly_payment"
        android:padding="10dp"
        android:text="@string/loan_simulator_monthly_payment"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/activity_simulator_loan_title_results" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/activity_simulator_loan_monthly_payment"
        style="@style/TextAppearance.Material3.BodyMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="@id/activity_simulator_loan_title_monthly_payment"
        app:layout_constraintLeft_toRightOf="@id/activity_simulator_loan_title_monthly_payment"
        app:layout_constraintTop_toTopOf="@id/activity_simulator_loan_title_monthly_payment" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/activity_simulator_loan_title_total_interest"
        style="@style/TextAppearance.Material3.BodyMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@id/activity_simulator_loan_total_interests"
        android:padding="10dp"
        android:text="@string/loan_simulator_total_interests"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/activity_simulator_loan_monthly_payment" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/activity_simulator_loan_total_interests"
        style="@style/TextAppearance.Material3.BodyMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="@id/activity_simulator_loan_title_total_interest"
        app:layout_constraintLeft_toRightOf="@id/activity_simulator_loan_title_total_interest"
        app:layout_constraintTop_toTopOf="@id/activity_simulator_loan_title_total_interest" />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/activity_simulator_loan_title_total_payment"
        style="@style/TextAppearance.Material3.BodyMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@id/activity_simulator_loan_total_payment"
        android:padding="10dp"
        android:text="@string/loan_simulator_total_payment"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/activity_simulator_loan_title_total_interest" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/activity_simulator_loan_total_payment"
        style="@style/TextAppearance.Material3.BodyMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="@id/activity_simulator_loan_title_total_payment"
        app:layout_constraintLeft_toRightOf="@id/activity_simulator_loan_title_total_payment"
        app:layout_constraintTop_toTopOf="@id/activity_simulator_loan_title_total_payment" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/activity_simulator_button_calculate"
        style="@style/TextAppearance.Material3.BodyMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="50dp"
        android:text="@string/loan_simulator_calculate"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/activity_simulator_loan_total_payment" />

</androidx.constraintlayout.widget.ConstraintLayout>